--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,3 +7,7 @@ services:
     restart: always
     ports:
       - 8080:8080
+    volumes:
+      - carbon:/data/graphite/whisper/
+volumes:
+  carbon:
