--- a/carbon/storage-schemas.conf
+++ b/carbon/storage-schemas.conf
@@ -12,6 +12,10 @@
 pattern = ^carbon\.
 retentions = 10s:6h,1m:90d
 
+[thumbor]
+pattern = ^stats.*thumbor\.
+retentions = 10s:1d,10m:30d,30m:90d,60m:365d,1d:1800d
+
 [sitespeed]
 pattern = ^sitespeed_io\.
 retentions = 10m:30d,30m:90d,60m:365d,1d:1800d
